MAJ pour compilation avec QtCreator
Ignorer les dossiers et les scripts générés à la compilation du projet par QtCreator.

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,13 @@ Makefile*
 
 *.autosave
 
-#QtCtreator Qml
+# Possible build dirs:
+build*/
+release/
+*.Debug
+*.Release
+
+#QtCreator Qml
 *.qmlproject.user
 *.qmlproject.user.*
 
