--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.o
 *.obj
 
+# Automatically-generated building files
+*.d
+*.mk
+
 # Precompiled Headers
 *.gch
 *.pch
@@ -31,18 +35,6 @@
 *.app
 
 ### Qt ###
-# C++ objects and libs
-
-*.slo
-*.lo
-*.o
-*.a
-*.la
-*.lai
-*.so
-*.dll
-*.dylib
-
 # Qt-es
 
 /.qmake.cache
